fix(manufacturing): Fix unable to click on input area to show focus on mobile

--- a/tahp/public/css/job_card.css
+++ b/tahp/public/css/job_card.css
@@ -134,7 +134,7 @@
 .jc-edit-editing {
     font-size: 1.25rem;
     padding: 5px 10px;
-    max-width: 5ch;
+    max-width: 10ch;
     border: 1px solid #ccc;
     border-radius: 20px;
     overflow: hidden;
